[gd_scene load_steps=6 format=2]

[ext_resource path="res://LeaderboardEntry.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Michroma.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://LeaderboardTable.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.278431, 0.290196, 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 1, 1, 1, 0.647059 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Leaderboard" type="PanelContainer"]
margin_right = 700.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Table" type="VBoxContainer" parent="."]
margin_right = 700.0
margin_bottom = 415.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Table"]
margin_right = 700.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "Units Killed"
align = 1

[node name="LeaderboardEntry1" parent="Table" instance=ExtResource( 1 )]
margin_top = 39.0
margin_right = 700.0
margin_bottom = 73.0

[node name="LeaderboardEntry2" parent="Table" instance=ExtResource( 1 )]
margin_top = 77.0
margin_right = 700.0
margin_bottom = 111.0

[node name="LeaderboardEntry3" parent="Table" instance=ExtResource( 1 )]
margin_top = 115.0
margin_right = 700.0
margin_bottom = 149.0

[node name="LeaderboardEntry4" parent="Table" instance=ExtResource( 1 )]
margin_top = 153.0
margin_right = 700.0
margin_bottom = 187.0

[node name="LeaderboardEntry5" parent="Table" instance=ExtResource( 1 )]
margin_top = 191.0
margin_right = 700.0
margin_bottom = 225.0

[node name="LeaderboardEntry6" parent="Table" instance=ExtResource( 1 )]
margin_top = 229.0
margin_right = 700.0
margin_bottom = 263.0

[node name="LeaderboardEntry7" parent="Table" instance=ExtResource( 1 )]
margin_top = 267.0
margin_right = 700.0
margin_bottom = 301.0

[node name="LeaderboardEntry8" parent="Table" instance=ExtResource( 1 )]
margin_top = 305.0
margin_right = 700.0
margin_bottom = 339.0

[node name="LeaderboardEntry9" parent="Table" instance=ExtResource( 1 )]
margin_top = 343.0
margin_right = 700.0
margin_bottom = 377.0

[node name="LeaderboardEntry10" parent="Table" instance=ExtResource( 1 )]
margin_top = 381.0
margin_right = 700.0
margin_bottom = 415.0
